@@ -2,7 +2,7 @@
 #
 # Description : Compile SDL 2.0.3
 # Author      : Jose Cerrejon Gonzalez (ulysess@gmail_dot._com)
-# Version     : 1.0 (16/May/14)
+# Version     : 1.1 (3/Jul/14)
 #
 # Help        · https://github.com/jlnr/gosu/wiki/Getting-Started-on-Raspbian-%28Raspberry-Pi%29
 #
@@ -11,6 +11,7 @@ clear
 echo -e "Compile SDL 2.03 + ttf + image + mixer\n======================================\nIt can take 40 min. Be patience...\n"
 
 # sudo apt install -y build-essential xorg-dev libudev-dev libts-dev libgl1-mesa-dev libglu1-mesa-dev libasound2-dev libpulse-dev libopenal-dev libogg-dev libvorbis-dev libaudiofile-dev libpng12-dev libfreetype6-dev libusb-dev libdbus-1-dev zlib1g-dev libdirectfb-dev
+sudo apt-get install -y libudev-dev libasound2-dev libdbus-1-dev libraspberrypi0 libraspberrypi-bin libraspberrypi-dev
 
 wget http://www.libsdl.org/release/SDL2-2.0.3.zip
 wget https://www.libsdl.org/projects/SDL_ttf/release/SDL2_ttf-2.0.12.zip
@@ -20,16 +21,16 @@ wget https://www.libsdl.org/projects/SDL_mixer/release/SDL2_mixer-2.0.0.zip
 unzip \*.zip
 
 cd SDL2-2.*
-./configure --prefix=/opt/SDL2 --disable-video-x11 && make && sudo make install
+./configure && make && sudo make install
 cd ..
 cd SDL2_ttf-2.*
-./configure --prefix=/opt/SDL2 && make && sudo make install
+./configure && make && sudo make install
 cd ..
-cd SDL2_image-2.0.0/
-./configure --prefix=/opt/SDL2 && make && sudo make install
+cd SDL2_image-2*
+./configure && make && sudo make install
 cd ..
-cd SDL2_mixer-2.0.0/
-./configure --prefix=/opt/SDL2 && make && sudo make install
+cd SDL2_mixer-2*
+./configure && make && sudo make install
 cd ..
 
 sudo ldconfig
@@ -38,4 +39,4 @@ sudo ldconfig
 rm SDL2-2.*.zip SDL2_*.zip
 
 
-read -p "Done!. Installed on /opt/SDL2. Press [Enter] to continue..."
+read -p "Done!. Press [Enter] to continue..."
