@@ -1,3 +1,8 @@
+(03/07/14)
+==========
+
+· Added Server > smtp mail config
+
 (01/07/14)
 ==========
 
